# controller

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
include/: constants.h  resource.h
lang/: en-US.json  zh-CN.json
res/: app.manifest  resource.rc
res/lang/: zh-CN.json
src/: main.cpp
src/common/: Common.ixx  Logger.ixx  Utils.ixx
src/components/: Config.ixx  Controller.ixx  I18n.ixx  KernelService.ixx  Log.ixx  Logger.ixx  NetworkBlocker.ixx  Service.ixx  TrayManager.ixx
src/profile/: Downloader.ixx  Manager.ixx
tests/: tests.cpp
